--- a/web/themes/dedrone/templates/views/views-view-unformatted--upcoming-webinars.html.twig
+++ b/web/themes/dedrone/templates/views/views-view-unformatted--upcoming-webinars.html.twig
@@ -24,7 +24,7 @@
     {%
 
     set row_classes = [
-    default_row_class ? 'views-row', 'col-sm-4',
+    default_row_class ? 'views-row', 'col-md-4', 'col-sm-6',
     ]
     %}
 
