--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -6990,51 +6990,89 @@ a {
     .header__logo-link img {
       display: block;
       width: 100%; }
-
-.main-menu > li {
-  float: left;
-  margin-left: 30px;
-  padding: 0; }
-  .main-menu > li:first-child {
-    margin-left: 0px; }
-  .main-menu > li:last-child > a,
-  .main-menu > li:last-child > span {
-    color: #e5310e; }
-  .main-menu > li:last-child span {
+  .header .navbar {
     display: block;
-    padding: 5px 0 4px 0;
-    font-size: 13px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    cursor: pointer; }
-  .main-menu > li > a {
-    display: block;
-    padding: 5px 0 4px 0;
-    font-size: 13px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #111; }
+    padding: 0; }
+    .header .navbar-light .navbar-toggler {
+      border: 0 none; }
+      @media (max-width: 991px) {
+        .header .navbar-light .navbar-toggler {
+          position: absolute;
+          right: 0;
+          top: -32px; } }
+    @media (max-width: 991px) {
+      .header .navbar {
+        width: 100%; } }
+  @media (max-width: 991px) {
+    .header .container {
+      width: 100%;
+      max-width: 100%; } }
 
-.main-menu > .menu-item {
-  position: relative; }
-  .main-menu > .menu-item--expanded > .menu {
-    display: none;
-    position: absolute;
-    z-index: 11;
-    right: -35px;
-    left: -35px;
-    min-width: 100%;
-    padding: 10px;
-    margin: 0px;
-    background: #fff;
-    border-radius: 2px;
-    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.25); }
-    .main-menu > .menu-item--expanded > .menu a {
-      padding: 7px 0 7px 20px; }
-  .main-menu > .menu-item--expanded:hover > .menu {
-    display: block; }
+.main-menu {
+  margin: 0; }
+  .main-menu > li {
+    float: left;
+    margin-left: 30px;
+    padding: 0; }
+    .main-menu > li:first-child {
+      margin-left: 0px; }
+    .main-menu > li:last-child > a,
+    .main-menu > li:last-child > span {
+      color: #e5310e; }
+    .main-menu > li:last-child span {
+      display: block;
+      padding: 5px 0 4px 0;
+      font-size: 13px;
+      font-weight: 400;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      cursor: pointer; }
+    .main-menu > li > a {
+      display: block;
+      padding: 5px 0 4px 0;
+      font-size: 13px;
+      font-weight: 400;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      color: #111; }
+  .main-menu > .menu-item {
+    position: relative; }
+    .main-menu > .menu-item--expanded > .menu {
+      display: none;
+      position: absolute;
+      z-index: 11;
+      right: -35px;
+      left: -35px;
+      min-width: 100%;
+      padding: 10px;
+      margin: 0px;
+      background: #fff;
+      border-radius: 2px;
+      box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.25); }
+      .main-menu > .menu-item--expanded > .menu a {
+        padding: 7px 0 7px 20px; }
+    .main-menu > .menu-item--expanded:hover > .menu {
+      display: block; }
+  @media (max-width: 991px) {
+    .main-menu {
+      margin-top: 20px; }
+      .main-menu > li {
+        float: none;
+        width: 100%;
+        margin-left: 0; }
+        .main-menu > li:last-child > a,
+        .main-menu > li:last-child > span {
+          color: #e5310e; }
+        .main-menu > li:last-child span {
+          display: block;
+          padding: 5px 0 4px 0;
+          font-size: 13px;
+          font-weight: 400;
+          letter-spacing: 1px;
+          text-transform: uppercase;
+          cursor: pointer; }
+        .main-menu > li > a {
+          padding: 10px 0; } }
 
 /* ==========================================================================
    Footer menu region style sheets.
@@ -7398,6 +7436,14 @@ button {
       .contact-us-form .form-item-submit input[type="submit"]:hover,
       .contact-us-form .form-item-submit button:hover {
         background: #008ecc; }
+  @media (max-width: 991px) {
+    .contact-us-form {
+      padding-top: 100px;
+      padding-bottom: 100px; } }
+  @media (max-width: 767px) {
+    .contact-us-form {
+      padding-top: 50px;
+      padding-bottom: 50px; } }
 
 .slider-main {
   height: 550px;
@@ -7467,6 +7513,13 @@ button {
         opacity: 1; }
   .slider-main .swiper-wrapper {
     height: 550px; }
+  .slider-main .swiper-slide:nth-child(1) h2,
+  .slider-main .swiper-slide:nth-child(1) p, .slider-main .swiper-slide:nth-child(3) h2,
+  .slider-main .swiper-slide:nth-child(3) p {
+    color: #111; }
+  .slider-main .swiper-slide:nth-child(1) .button, .slider-main .swiper-slide:nth-child(3) .button {
+    background-image: linear-gradient(180deg, #009ee3, #009ee3);
+    color: #fff; }
   .slider-main .swiper-container {
     height: 100%; }
     .slider-main .swiper-container .image-wrap {
@@ -7493,6 +7546,9 @@ button {
     padding-right: 50px; }
   .slider-main .field--type-view-mode-selector > p {
     display: none; }
+  @media (max-width: 991px) {
+    .slider-main .wrap-description {
+      width: 100%; } }
 
 .slider-inner {
   padding-top: 150px;
@@ -7504,6 +7560,7 @@ button {
     overflow: hidden;
     display: inline-block;
     margin-top: -300px;
+    width: 100%;
     max-width: 940px;
     box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, 0.3);
     border-radius: 4px; }
@@ -7572,6 +7629,35 @@ button {
     opacity: 1; }
   .slider-inner .field--type-view-mode-selector > p {
     display: none; }
+  @media (max-width: 991px) {
+    .slider-inner {
+      padding-top: 100px;
+      padding-bottom: 100px;
+      background: #fff;
+      text-align: left; }
+      .slider-inner .slider-wrap {
+        margin-top: 0;
+        box-shadow: none; }
+      .slider-inner .wrap-slide {
+        display: block;
+        padding-bottom: 90px;
+        height: auto; }
+        .slider-inner .wrap-slide .image-wrap {
+          display: none; }
+        .slider-inner .wrap-slide .container {
+          padding: 0; }
+      .slider-inner .field--type-link {
+        text-align: center; }
+      .slider-inner .button-bordered {
+        display: inline-block;
+        min-width: 205px;
+        width: auto; }
+      .slider-inner .swiper-pagination {
+        width: 100%; } }
+  @media (max-width: 767px) {
+    .slider-inner {
+      padding-top: 50px;
+      padding-bottom: 50px; } }
 
 .benefits-trio {
   padding: 150px 0;
@@ -7590,12 +7676,32 @@ button {
       font-size: 15px;
       line-height: 20px;
       font-weight: 500; }
+  @media (max-width: 991px) {
+    .benefits-trio {
+      padding-top: 100px;
+      padding-bottom: 100px; } }
+  @media (max-width: 767px) {
+    .benefits-trio {
+      padding-top: 50px;
+      padding-bottom: 50px; }
+      .benefits-trio .row {
+        display: block; }
+        .benefits-trio .row .col-sm {
+          display: block;
+          width: 100%;
+          margin-bottom: 75px; }
+          .benefits-trio .row .col-sm:last-child {
+            margin-bottom: 0; }
+          .benefits-trio .row .col-sm p {
+            margin: 10px 0; } }
 
 .text-columns {
   min-height: 1000px;
   padding-top: 150px;
   padding-bottom: 150px;
   background-image: url("../images/text_columns_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
   background-size: cover; }
   .text-columns .title {
     margin: 10px 0;
@@ -7616,6 +7722,38 @@ button {
       line-height: 24px;
       text-align: center;
       font-weight: 300; }
+  @media (max-width: 767px) {
+    .text-columns .row {
+      display: block; } }
+  .text-columns .thumb {
+    position: relative; }
+    .text-columns .thumb:after {
+      position: absolute;
+      content: '';
+      left: 50%;
+      width: 1px; }
+    .text-columns .thumb:nth-child(1):after, .text-columns .thumb:nth-child(3):after {
+      bottom: -140px;
+      height: 140px;
+      background: #011d2a; }
+    @media (max-width: 767px) {
+      .text-columns .thumb:nth-child(1), .text-columns .thumb:nth-child(3) {
+        display: none; } }
+    .text-columns .thumb:nth-child(2) p {
+      color: #009ee3; }
+    .text-columns .thumb:nth-child(2):after {
+      bottom: -80px;
+      height: 80px;
+      background: #009ee3; }
+    @media (max-width: 767px) {
+      .text-columns .thumb:nth-child(2) {
+        width: 220px;
+        padding: 0;
+        margin-right: auto;
+        margin-left: auto; } }
+  @media (max-width: 991px) {
+    .text-columns {
+      padding-bottom: 100px; } }
 
 .products-intro {
   position: relative;
@@ -7670,6 +7808,21 @@ button {
       top: 0px; }
   .products-intro .paragraph__column {
     padding: 0 !important; }
+  @media (max-width: 991px) {
+    .products-intro {
+      min-height: 509px; }
+      .products-intro .tab-pane {
+        width: 100%; }
+        .products-intro .tab-pane .image {
+          display: none; }
+      .products-intro.horizontal-tabs .nav-tabs {
+        -ms-flex: 0 0 120px;
+            flex: 0 0 120px;
+        max-width: 120px; } }
+  @media (max-width: 767px) {
+    .products-intro {
+      padding-top: 50px;
+      padding-bottom: 50px; } }
 
 .customers {
   padding-top: 150px;
@@ -7695,7 +7848,7 @@ button {
     font-weight: 300; }
   .customers .thumb img {
     max-width: 170px;
-    width: 170px;
+    width: 100%;
     height: auto; }
   .customers .thumbs-wrap {
     margin: 100px 0; }
@@ -7713,6 +7866,28 @@ button {
     font-weight: 300; }
     .customers .btn-customers:hover {
       background-image: linear-gradient(180deg, #008ecc, #008ecc); }
+  @media (max-width: 991px) {
+    .customers {
+      padding-top: 100px;
+      padding-bottom: 100px; }
+      .customers .thumbs-wrap {
+        margin: 50px 0; }
+      .customers .thumb {
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+        -ms-flex-negative: 0;
+            flex-shrink: 0;
+        -ms-flex-preferred-size: 33.333%;
+            flex-basis: 33.333%; }
+        .customers .thumb .column-wrap {
+          margin-bottom: 20px; } }
+  @media (max-width: 767px) {
+    .customers {
+      padding-top: 50px;
+      padding-bottom: 50px; }
+      .customers .thumb {
+        -ms-flex-preferred-size: 50%;
+            flex-basis: 50%; } }
 
 .buttons-section {
   padding-top: 0;
@@ -7748,6 +7923,18 @@ button {
         border-color: #fff;
         background-image: linear-gradient(180deg, #fff, #fff);
         color: #011d2a; }
+  @media (max-width: 991px) {
+    .buttons-section {
+      padding-top: 100px;
+      padding-bottom: 100px; } }
+  @media (max-width: 767px) {
+    .buttons-section {
+      padding-top: 50px;
+      padding-bottom: 50px; }
+      .buttons-section .wrap-buttons {
+        padding-top: 25px; }
+        .buttons-section .wrap-buttons .btn-bordered {
+          margin: 20px 0; } }
 
 .webinars-section {
   padding-top: 175px;
@@ -7767,6 +7954,16 @@ button {
       line-height: 24px;
       font-weight: 300;
       color: #fff; }
+  @media (max-width: 991px) {
+    .webinars-section {
+      padding-top: 100px;
+      padding-bottom: 100px; }
+      .webinars-section .wpap-content {
+        padding-left: 50%; } }
+  @media (max-width: 767px) {
+    .webinars-section {
+      padding-top: 50px;
+      padding-bottom: 50px; } }
 
 .upcoming-webinars-section {
   padding-top: 150px;
@@ -7801,10 +7998,18 @@ button {
     text-transform: uppercase;
     font-weight: 500; }
   .upcoming-webinars-section .column-item {
-    margin-bottom: 100px; }
+    margin-bottom: 40px; }
     .upcoming-webinars-section .column-item a {
       text-decoration: none;
       color: #111; }
+  @media (max-width: 991px) {
+    .upcoming-webinars-section {
+      padding-top: 100px;
+      padding-bottom: 100px; } }
+  @media (max-width: 767px) {
+    .upcoming-webinars-section {
+      padding-top: 50px;
+      padding-bottom: 50px; } }
 
 .cta-section {
   padding-top: 150px;
@@ -7830,6 +8035,14 @@ button {
     .cta-section .button-bordered:hover {
       background: #fff;
       color: #f05c40; }
+  @media (max-width: 991px) {
+    .cta-section {
+      padding-top: 100px;
+      padding-bottom: 100px; } }
+  @media (max-width: 767px) {
+    .cta-section {
+      padding-top: 50px;
+      padding-bottom: 50px; } }
 
 /* ==========================================================================
    Page "Technology Partners" styles
