--- a/web/themes/dedrone/scss/blocks/_benefits-trio.scss
+++ b/web/themes/dedrone/scss/blocks/_benefits-trio.scss
@@ -25,4 +25,32 @@
 		p {
 		}
 	}
+
+	@media (max-width: 991px) {
+		padding-top: 100px;
+		padding-bottom: 100px;
+	}
+
+	@media (max-width: 767px) {
+		padding-top: 50px;
+		padding-bottom: 50px;
+
+		.row {
+			display: block;
+
+			.col-sm {
+				display: block;
+				width: 100%;
+				margin-bottom: 75px;
+
+				&:last-child {
+					margin-bottom: 0;
+				}
+
+				p {
+					margin: 10px 0;
+				}
+			}
+		}
+	}
 }
