--- a/web/themes/dedrone/scss/blocks/_customers.scss
+++ b/web/themes/dedrone/scss/blocks/_customers.scss
@@ -29,7 +29,7 @@
 	.thumb {
 		img {
 			max-width: 170px;
-			width: 170px;
+			width: 100%;
 			height: auto;
 		}
 	}
@@ -59,4 +59,33 @@
 			background-image: linear-gradient(180deg,#008ecc,#008ecc);
 		}
 	}
+
+	@media (max-width: 991px) {
+		padding-top: 100px;
+		padding-bottom: 100px;
+
+		.thumbs-wrap {
+			margin: 50px 0;
+		}
+
+		.thumb {
+			flex-grow: 0;
+			flex-shrink: 0;
+			flex-basis: 33.333%;
+
+			.column-wrap {
+				margin-bottom: 20px;
+			}
+		}
+	}
+
+	@media (max-width: 767px) {
+		padding-top: 50px;
+		padding-bottom: 50px;
+
+		.thumb {
+			flex-basis: 50%;
+		}
+	}
+
 }
