--- a/web/themes/dedrone/scss/blocks/_forms.scss
+++ b/web/themes/dedrone/scss/blocks/_forms.scss
@@ -90,4 +90,14 @@ button {
 			}
 		}
 	}
+
+	@media (max-width: 991px) {
+		padding-top: 100px;
+		padding-bottom: 100px;
+	}
+
+	@media (max-width: 767px) {
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
 }
