--- a/web/themes/dedrone/scss/blocks/_text-columns.scss
+++ b/web/themes/dedrone/scss/blocks/_text-columns.scss
@@ -3,6 +3,8 @@
 	padding-top: 150px;
 	padding-bottom: 150px;
 	background-image: url('../images/text_columns_bg.jpg');
+	background-repeat: no-repeat;
+	background-position: 50% 0;
 	background-size: cover;
 
 	.title {
@@ -28,5 +30,60 @@
 			text-align: center;
 			font-weight: 300;
 		}
+	}
+
+	.row {
+		@media (max-width: 767px) {
+			display: block;
+		}
+	}
+
+	.thumb {
+		position: relative;
+
+		&:after {
+			position: absolute;
+			content: '';
+			left: 50%;
+			width: 1px;
+		}
+
+		&:nth-child(1),
+		&:nth-child(3) {
+			&:after {
+				bottom: -140px;
+				height: 140px;
+				background: #011d2a;
+			}
+
+			@media (max-width: 767px) {
+				display: none;
+			}
+		}
+
+		&:nth-child(2) {
+			p {
+				color: #009ee3;
+			}
+
+			&:after {
+				bottom: -80px;
+				height: 80px;
+				background: #009ee3;
+			}
+
+			@media (max-width: 767px) {
+				width: 220px;
+				padding: 0;
+				margin-right: auto;
+				margin-left: auto;
+			}
+		}
+
+	}
+
+	@media (max-width: 991px) {
+		//padding-top: 100px;
+		padding-bottom: 100px;
 	}
 }
