--- a/web/themes/dedrone/scss/blocks/_webinars-section.scss
+++ b/web/themes/dedrone/scss/blocks/_webinars-section.scss
@@ -22,6 +22,21 @@
 			color: #fff;
 		}
 	}
+
+	@media (max-width: 991px) {
+		padding-top: 100px;
+		padding-bottom: 100px;
+
+		.wpap-content {
+			padding-left: 50%;
+		}
+	}
+
+	@media (max-width: 767px) {
+		padding-top: 50px;
+		padding-bottom: 50px;
+
+	}
 }
 
 .upcoming-webinars-section {
@@ -72,11 +87,23 @@
 
 
 	.column-item {
-		margin-bottom: 100px;
+		margin-bottom: 40px;
 
 		a {
 			text-decoration: none;
 			color: #111;
 		}
 	}
+
+	@media (max-width: 991px) {
+		padding-top: 100px;
+		padding-bottom: 100px;
+	}
+
+	@media (max-width: 767px) {
+		padding-top: 50px;
+		padding-bottom: 50px;
+
+	}
+
 }
