--- a/web/themes/dedrone/templates/block/block--system-menu-block--main.html.twig
+++ b/web/themes/dedrone/templates/block/block--system-menu-block--main.html.twig
@@ -34,6 +34,9 @@
 {%
   set classes = [
     'main-nav',
+    'navbar',
+    'navbar-light',
+    'navbar-expand-lg',
     'float-right',
     'block',
     'block-menu',
