--- a/web/themes/dedrone/templates/region--header.html.twig
+++ b/web/themes/dedrone/templates/region--header.html.twig
@@ -8,10 +8,10 @@
 {% if content %}
   <header{{ attributes.addClass(classes) }}>
 	 <div class="container">
-     <div class="clearfix">
-        {{ content }}
-      </div>
+         <div class="clearfix">
+            {{ content }}
+          </div>
 	 </div>
-  </HEADER>
+  </header>
 {% endif %}
-      
+
