--- a/web/themes/dedrone/scss/blocks/_header.scss
+++ b/web/themes/dedrone/scss/blocks/_header.scss
@@ -66,18 +66,19 @@
 				color: #e5310e;
 			}
 
-			span {
-				display: block;
-				padding: 5px 0 4px 0;
-				font-size: 13px;
-				font-weight: 400;
-				letter-spacing: 1px;
-				text-transform: uppercase;
-				cursor: pointer;
-			}
+			//span {
+			//	display: block;
+			//	padding: 5px 0 4px 0;
+			//	font-size: 13px;
+			//	font-weight: 400;
+			//	letter-spacing: 1px;
+			//	text-transform: uppercase;
+			//	cursor: pointer;
+			//}
 		}
 		
-		& > a {
+		& > a,
+		span {
 			display: block;
 			padding: 5px 0 4px 0;
 			font-size: 13px;
@@ -85,6 +86,12 @@
 		    letter-spacing: 1px;
 		    text-transform: uppercase;
 		    color: #111;
+			text-decoration: none !important;
+			cursor: pointer;
+
+			&:hover {
+				color: #e5310e;
+			}
 		}
 	}
 
@@ -92,6 +99,8 @@
 		position: relative;
 
 		&--expanded {
+			list-style-image: none;
+			list-style-type: none;
 
 			& > .menu {
 				display: none;
