Add new page software(but not finished) and new file db

--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -8548,6 +8548,368 @@ button {
       padding: 0;
       margin-top: 15px; }
 
+.page_software_your_airspace {
+  height: 600px;
+  -ms-flex-align: center;
+      align-items: center;
+  box-sizing: border-box;
+  -ms-flex-pack: center;
+      justify-content: center;
+  display: -ms-flexbox;
+  display: flex; }
+  .page_software_your_airspace .paragraph {
+    -ms-flex-align: center;
+        align-items: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-preferred-size: 0;
+        flex-basis: 0;
+    -ms-flex-positive: 1;
+        flex-grow: 1;
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
+    max-width: 960px;
+    padding: 0 auto;
+    text-align: left;
+    height: 190px;
+    margin-left: auto;
+    margin-right: auto; }
+    .page_software_your_airspace .paragraph .field--name-field-label- {
+      height: 190px;
+      width: 320px;
+      position: relative;
+      float: left;
+      min-height: 1px;
+      padding: 0 10px; }
+      .page_software_your_airspace .paragraph .field--name-field-label- h1 {
+        clear: both;
+        text-decoration: none;
+        color: #fcf8f8;
+        font-weight: 400;
+        padding-bottom: 0;
+        border-bottom-width: 0;
+        font-family: 'Pluto Sans Condensed Extra Light',sans-serif;
+        font-size: 40px;
+        line-height: 45px;
+        text-align: left;
+        letter-spacing: 0;
+        border-bottom-color: #bbb;
+        border-style: none;
+        text-transform: none;
+        margin-top: 0; }
+      .page_software_your_airspace .paragraph .field--name-field-label- h2 {
+        clear: both;
+        color: #fcf8f8;
+        margin-top: 20px;
+        font-size: 20px;
+        line-height: 24px;
+        font-weight: 200;
+        text-align: left;
+        letter-spacing: 0;
+        text-transform: none; }
+
+.section-software-enabled-security {
+  background-image: linear-gradient(180deg, #011d2a, #011d2a);
+  min-height: 600px;
+  padding-top: 150px;
+  padding-bottom: 150px;
+  display: block; }
+  .section-software-enabled-security .paragraph {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
+    display: -ms-flexbox;
+    display: flex; }
+    .section-software-enabled-security .paragraph .field--name-field-image-software-enable-secu {
+      position: relative;
+      min-height: 1px;
+      padding-left: 10px;
+      padding-right: 10px;
+      margin-right: 80px;
+      height: 295px; }
+      .section-software-enabled-security .paragraph .field--name-field-image-software-enable-secu img {
+        height: 294px;
+        width: 540px;
+        border: 0;
+        margin-top: 50px;
+        opacity: 1;
+        transform: translateX(0px) translateY(0px) translateZ(0px);
+        transition: opacity 400ms ease 0s, transform 400ms ease 0s;
+        margin-bottom: 0;
+        color: #818181; }
+  .section-software-enabled-security .field--name-field-text-software-enabled-sec {
+    color: #818181;
+    position: relative;
+    -webkit-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
+            text-size-adjust: 100%;
+    padding-left: 10px;
+    padding-right: 10px; }
+    .section-software-enabled-security .field--name-field-text-software-enabled-sec h2 {
+      color: #ece9e9;
+      font-weight: 50;
+      padding-bottom: 0;
+      border-bottom-width: 0;
+      font-size: 40px;
+      line-height: 45px;
+      text-align: left;
+      letter-spacing: 0;
+      border-bottom-color: #bbb;
+      border-style: none;
+      text-transform: none;
+      font-weight: 100; }
+    .section-software-enabled-security .field--name-field-text-software-enabled-sec p {
+      color: #ece9e9;
+      clear: none;
+      display: inline-block;
+      float: none;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 24px;
+      list-style-type: disc;
+      margin-top: 20px;
+      margin-bottom: 0;
+      text-align: left;
+      margin-bottom: 20px; }
+
+.section_dronedna {
+  -ms-flex-align: center;
+      align-items: center;
+  box-sizing: border-box;
+  color: #818181;
+  display: block;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -ms-flex-pack: center;
+      justify-content: center;
+  padding: 150px 0;
+  -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+          text-size-adjust: 100%;
+  -webkit-box-align: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal; }
+  .section_dronedna .paragraph {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
+    -ms-flex-align: center;
+        align-items: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center; }
+
+.field--name-field-text-dronedna {
+  float: none;
+  min-height: 1px;
+  padding: 0 10px;
+  position: relative;
+  width: 33.333333%;
+  margin-right: 79px; }
+  .field--name-field-text-dronedna h2 {
+    padding-bottom: 0;
+    border-bottom-width: 0;
+    font-family: 'Pluto Sans Condensed Extra Light',sans-serif;
+    font-size: 40px;
+    line-height: 45px;
+    text-align: left;
+    letter-spacing: 0;
+    color: #111;
+    border-bottom-color: #bbb;
+    border-style: none;
+    text-transform: none;
+    margin-top: 0;
+    margin-bottom: 10px; }
+  .field--name-field-text-dronedna p {
+    margin-top: 10px;
+    float: none;
+    clear: none;
+    font-family: 'Pluto Sans Condensed Light',sans-serif;
+    color: #111;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: left;
+    display: inline-block;
+    margin-bottom: 5px;
+    font-weight: 400; }
+
+.field--name-field-image-reporti {
+  width: 58.333333%;
+  float: none;
+  padding: 0;
+  position: relative; }
+  .field--name-field-image-reporti img {
+    width: 495px;
+    height: 400px;
+    opacity: 1;
+    transform: translateX(0px) translateY(0px) translateZ(0px);
+    display: block;
+    transition: opacity 400ms ease 0s, transform 400ms ease 0s;
+    margin-top: 0;
+    margin-bottom: 0;
+    border: 0;
+    vertical-align: middle;
+    overflow: visible;
+    position: absolute;
+    text-align: left;
+    left: 0;
+    z-index: 1; }
+
+.paragraph--type--section-reporting-and-forensic-e {
+  -ms-flex-align: start;
+      align-items: flex-start;
+  background-image: linear-gradient(180deg, #f05c40, #f05c40);
+  box-sizing: border-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -ms-flex-pack: center;
+      justify-content: center;
+  padding-bottom: 150px;
+  padding-top: 175px;
+  position: relative;
+  text-align: left; }
+
+.wrapper_text_reporting {
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 2;
+  width: 940px; }
+
+.field--name-field-text-reporting-and-forensi {
+  width: 400px;
+  color: #f8f8f8;
+  line-height: 26px;
+  -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+          text-size-adjust: 100%;
+  float: right;
+  padding-left: 10px;
+  padding-right: 10px; }
+  .field--name-field-text-reporting-and-forensi h2 {
+    clear: none;
+    -ms-flex: 0 auto;
+        flex: 0 auto;
+    color: #e6d9d9;
+    border-style: none;
+    width: auto;
+    margin-top: 0;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+    padding-bottom: 0;
+    border-bottom-width: 0;
+    font-family: 'Pluto Sans Condensed Extra Light', sans-serif;
+    font-size: 40px;
+    line-height: 45px;
+    text-align: left;
+    letter-spacing: 0;
+    border-bottom-color: #bbb;
+    font-weight: 200;
+    text-transform: none;
+    margin-bottom: 10px; }
+  .field--name-field-text-reporting-and-forensi p {
+    color: #f8f8f8;
+    clear: none;
+    display: inline-block;
+    float: none;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-top: 15px;
+    margin-bottom: 0; }
+  .field--name-field-text-reporting-and-forensi p a {
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    cursor: pointer;
+    font-size: 16px; }
+
+.paragraph--type--section-cloud-managed-airspace-s {
+  -ms-flex-align: start;
+      align-items: flex-start;
+  background-image: linear-gradient(180deg, #f8f8f8, #f8f8f8);
+  box-sizing: border-box;
+  display: block;
+  -ms-flex-pack: center;
+      justify-content: center;
+  padding-bottom: 200px;
+  padding-top: 180px;
+  text-align: left;
+  -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+          text-size-adjust: 100%; }
+
+.section_cloud_managed_airspace_security {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 940px;
+  height: 310px; }
+
+.field--name-field-image-cloud-managed-airspa {
+  width: 680px;
+  height: 350px;
+  opacity: 1;
+  overflow: hidden;
+  position: absolute;
+  left: -100px;
+  display: block;
+  float: left; }
+  .field--name-field-image-cloud-managed-airspa img {
+    margin-left: 40px;
+    width: 680px;
+    height: 350px;
+    overflow: visible;
+    position: absolute;
+    text-align: left;
+    opacity: 1;
+    transform: translateX(0px) translateY(0px) translateZ(0px);
+    display: block;
+    transition: opacity 400ms ease 0s, transform 400ms ease 0s;
+    left: 0;
+    z-index: 1; }
+
+.field--name-field-text- {
+  float: right;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  width: 300px; }
+  .field--name-field-text- h2 {
+    clear: none;
+    -ms-flex: 0 auto;
+        flex: 0 auto;
+    color: #111;
+    border-style: none;
+    width: auto;
+    margin-top: 0;
+    -ms-flex: 0 auto;
+        flex: 0 auto;
+    padding-bottom: 0;
+    font-size: 40px;
+    line-height: 45px;
+    text-align: left;
+    letter-spacing: 0;
+    border-bottom-color: #bbb;
+    font-weight: 200;
+    text-transform: none;
+    margin-bottom: 10px; }
+  .field--name-field-text- p {
+    margin-top: 10px;
+    margin-bottom: 5px;
+    clear: none;
+    display: inline-block;
+    float: none;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    margin-bottom: 20px;
+    margin-top: 20px; }
+
 /* ==========================================================================
    Page "Technology Partners" styles
    - positioning options and unique page styles.
