--- a/web/themes/dedrone/scss/blocks/_products_software.scss
+++ b/web/themes/dedrone/scss/blocks/_products_software.scss
@@ -2,21 +2,14 @@
   height: 600px;
   align-items: center;
   box-sizing: border-box;
-  flex-direction: row;
-  flex-wrap: nowrap;
   justify-content: center;
   display: flex;
 
-  .paragraph--type--page-software-your-airspace-secu {
-    -ms-flex-align: center;
+  .paragraph {
     align-items: center;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-preferred-size: 0;
     flex-basis: 0;
-    -ms-flex-positive: 1;
     flex-grow: 1;
-    -ms-flex-negative: 1;
     flex-shrink: 1;
     max-width: 960px;
     padding: 0 auto;
@@ -25,7 +18,7 @@
     margin-left: auto;
     margin-right: auto;
 
-    .field--name-field-section-your-airspace-secu {
+    .field--name-field-label- {
       height: 190px;
       width: 320px;
       position: relative;
@@ -33,7 +26,7 @@
       min-height: 1px;
       padding: 0 10px;
 
-      h2 {
+      h1 {
         clear: both;
         text-decoration: none;
         color: #fcf8f8;
@@ -51,8 +44,9 @@
         margin-top: 0;
       }
 
-      p {
-        color: white;
+      h2 {
+        clear: both;
+        color: #fcf8f8;
         margin-top: 20px;
         font-size: 20px;
         line-height: 24px;
@@ -64,49 +58,45 @@
     }
   }
 }
+///////////////////////////////////////////////////////
 
-.software-enabled-security-section {
+.section-software-enabled-security {
   background-image: linear-gradient(180deg,#011d2a,#011d2a);
-  box-sizing: border-box;
+  min-height: 600px;
   padding-top: 150px;
   padding-bottom: 150px;
   display: block;
-  font-family: 'Pluto Sans Light',sans-serif;
-  color: #818181;
-  line-height: 26px;
-}
 
-.paragraph--type--paragrap-image-and-text-left- {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 960px;
-  display: flex;
+  .paragraph {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
+    display: flex;
 
-  .field--name-field-dronetracker-diagram-pilod {
-    position: relative;
-    float: left;
-    min-height: 1px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-right: 80px;
+    .field--name-field-image-software-enable-secu {
+      position: relative;
+      min-height: 1px;
+      padding-left: 10px;
+      padding-right: 10px;
+      margin-right: 80px;
+      height: 295px;
 
-    img {
-      border: 0;
-      vertical-align: middle;
-      margin-top: 50px;
-      opacity: 1;
-      transform: translateX(0px) translateY(0px) translateZ(0px);
-      display: block;
-      transition: opacity 400ms ease 0s, transform 400ms ease 0s;
-      margin-bottom: 0;
-      color: #818181;
-      line-height: 26px;
+      img {
+        height: 294px;
+        width: 540px;
+        border: 0;
+        margin-top: 50px;
+        opacity: 1;
+        transform: translateX(0px) translateY(0px) translateZ(0px);
+        transition: opacity 400ms ease 0s, transform 400ms ease 0s;
+        margin-bottom: 0;
+        color: #818181;
+      }
     }
   }
 
-  .field--name-field__software-enabled-security {
+  .field--name-field-text-software-enabled-sec {
     color: rgb(129, 129, 129);
-    float: left;
     position: relative;
     text-size-adjust: 100%;
     padding-left: 10px;
@@ -117,7 +107,6 @@
       font-weight: 50;
       padding-bottom: 0;
       border-bottom-width: 0;
-      font-family: 'Pluto Sans Condensed Extra Light',sans-serif;
       font-size: 40px;
       line-height: 45px;
       text-align: left;
@@ -140,9 +129,11 @@
       margin-top: 20px;
       margin-bottom: 0;
       text-align: left;
+      margin-bottom: 20px;
     }
   }
 }
+/////////////////////////////////////////////////////////////////////
 
 .section_dronedna {
   align-items: center;
@@ -167,14 +158,15 @@
   }
 }
 
-.field--name-field-dronedna-is-a-machine {
+.field--name-field-text-dronedna {
   float: none;
   min-height: 1px;
   padding: 0 10px;
   position: relative;
   width: 33.333333%;
+  margin-right: 79px;
 
-  h1 {
+  h2 {
     padding-bottom: 0;
     border-bottom-width: 0;
     font-family: 'Pluto Sans Condensed Extra Light',sans-serif;
@@ -204,18 +196,17 @@
     font-weight: 400;
   }
 }
+////////////////////////////////////////////////////////////////////////////////
 
-.hidden_elem {
-  width: 8.333333%;
-}
-
-.field--name-field-image-detection- {
+.field--name-field-image-reporti {
   width: 58.333333%;
   float: none;
-  padding: 0 10px;
+  padding: 0;
   position: relative;
 
   img {
+    width: 495px;
+    height: 400px;
     opacity: 1;
     transform: translateX(0px) translateY(0px) translateZ(0px);
     display: block;
@@ -224,5 +215,213 @@
     margin-bottom: 0;
     border: 0;
     vertical-align: middle;
+    overflow: visible;
+    position: absolute;
+    text-align: left;
+    left: 0;
+    z-index: 1;
   }
 }
+
+.paragraph--type--section-reporting-and-forensic-e {
+  align-items: flex-start;
+  background-image: linear-gradient(180deg, #f05c40, #f05c40);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  padding-bottom: 150px;
+  padding-top: 175px;
+  position: relative;
+  text-align: left;
+}
+
+.wrapper_text_reporting {
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 2;
+  width: 940px;
+}
+
+.field--name-field-text-reporting-and-forensi {
+  width: 400px;
+  color: #f8f8f8;
+  line-height: 26px;
+  text-size-adjust: 100%;
+  float: right;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  h2 {
+    clear: none;
+    flex: 0 auto;
+    color: rgb(230, 217, 217);
+    border-style: none;
+    width: auto;
+    margin-top: 0;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+    padding-bottom: 0;
+    border-bottom-width: 0;
+    font-family: 'Pluto Sans Condensed Extra Light', sans-serif;
+    font-size: 40px;
+    line-height: 45px;
+    text-align: left;
+    letter-spacing: 0;
+    border-bottom-color: #bbb;
+    font-weight: 200;
+    text-transform: none;
+    margin-bottom: 10px;
+  }
+
+  p {
+    color: #f8f8f8;
+    clear: none;
+    display: inline-block;
+    float: none;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-top: 15px;
+    margin-bottom: 0;
+  }
+
+  p {
+    a {
+      background-color: rgba(0, 0, 0, 0);
+      color: rgb(255, 255, 255);
+      cursor: pointer;
+      font-size: 16px;
+    }
+  }
+}
+//////////////////////////////////////////////////////////
+//
+//  .paragraph--type--section-advanced-video-analytics {
+//   padding: 220px 0;
+//       background-image: linear-gradient(180deg,#f8f8f8,#f8f8f8);
+//   display: block;
+//   align-items: center;
+//   min-height: 800px;
+//
+//   .field--name-field-image-advanced-vide {
+//     width: 711px;
+//     height: 400px;
+//     opacity: 1;
+//     left: -140px;
+//     overflow: hidden;
+//     max-width: 100%;
+//     margin-top: 0;
+//     margin-bottom: 0;
+//     border: 0;
+//     vertical-align: middle;
+//
+//     img {
+//       width: 711px;
+//       height: 400px;
+//       opacity: 1;
+//       transform: translateX(0px) translateY(0px) translateZ(0px);
+//       transition: opacity 400ms ease 0s, transform 400ms ease 0s;
+//       position: absolute;
+//       left: -140px;
+//       overflow: hidden;
+//       max-width: 100%;
+//       margin-top: 0;
+//       margin-bottom: 0;
+//       border: 0;
+//       vertical-align: middle;
+//     }
+//   }
+// }
+////////////////////////////////////////
+
+.paragraph--type--section-cloud-managed-airspace-s {
+  align-items: flex-start;
+  background-image: linear-gradient(180deg,#f8f8f8,#f8f8f8);
+  box-sizing: border-box;
+  display: block;
+  justify-content: center;
+  padding-bottom: 200px;
+  padding-top: 180px;
+  text-align: left;
+  text-size-adjust: 100%;
+}
+
+.section_cloud_managed_airspace_security {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 940px;
+  height: 310px;
+}
+
+.field--name-field-image-cloud-managed-airspa {
+  width: 680px;
+  height: 350px;
+  opacity: 1;
+  overflow: hidden;
+  position: absolute;
+  left: -100px;
+  display: block;
+  float: left;
+
+  img {
+    margin-left: 40px;
+
+    width: 680px;
+    height: 350px;
+    overflow: visible;
+    position: absolute;
+    text-align: left;
+    opacity: 1;
+    transform: translateX(0px) translateY(0px) translateZ(0px);
+    display: block;
+    transition: opacity 400ms ease 0s, transform 400ms ease 0s;
+    left: 0;
+    z-index: 1;
+  }
+}
+
+.field--name-field-text- {
+  float: right;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  width: 300px;
+
+  h2 {
+    clear: none;
+    flex: 0 auto;
+        color: #111;
+    border-style: none;
+    width: auto;
+    margin-top: 0;
+    flex: 0 auto;
+    padding-bottom: 0;
+    font-size: 40px;
+    line-height: 45px;
+    text-align: left;
+    letter-spacing: 0;
+    border-bottom-color: #bbb;
+    font-weight: 200;
+    text-transform: none;
+    margin-bottom: 10px;
+  }
+  p{
+    margin-top: 10px;
+    margin-bottom: 5px;
+    clear: none;
+    display: inline-block;
+    float: none;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+}
+////////////////////////////////////////////////////////////////////
