--- a/web/themes/dedrone/css/page_products.css
+++ b/web/themes/dedrone/css/page_products.css
@@ -375,7 +375,7 @@
 
 /* ///////////////////////////////////////////////////// */
 
-.section_advanced_video_analytic {
+/* .section_advanced_video_analytic {
   align-items: center;
   background-image: linear-gradient(180deg, #f8f8f8, #f8f8f8);
   box-sizing: border-box;
@@ -448,22 +448,17 @@
 
 .field--name-field-machine-learning-video {
   background-color: #000;
-}
+} */
 
 /* //////////////////////////////////////////////////
               section  Reporting and  Forensic Evidence
 ///////////////////////////////////////////////////////// */
 
-.paragraph--type--page-products-reporting-and-fore {
-  -ms-align-items: flex-start;
+/* .paragraph--type--page-products-reporting-and-fore {
   align-items: flex-start;
   background-image: linear-gradient(180deg, #f05c40, #f05c40);
   box-sizing: border-box;
-  display: -webkit-flex;
-  display: -ms-flex;
   display: flex;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
@@ -578,25 +573,20 @@
 ///////////////////////////////////////////////////////// */
 
 .paragraph--type--page-products-cloud-managed-airs {
-  -ms-align-items: flex-start;
+
   align-items: flex-start;
   background-image: linear-gradient(180deg, #0a0c15, #0a0c15);
   box-sizing: border-box;
   color: rgb(248, 248, 248);
   display: block;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  flex-wrap: nowrap;
+
+
   justify-content: center;
   padding-bottom: 200px;
   padding-top: 180px;
   text-align: left;
   text-size-adjust: 100%;
-  -webkit-box-align: center;
-  -webkit-box-direction: normal;
-  -webkit-box-orient: vertical;
-  -webkit-box-pack: center;
+
 }
 
 .section_cloud_managed_airspace_security {
@@ -651,7 +641,7 @@
   list-style-type: disc;
   margin-bottom: 20px;
   margin-top: 20px;
-}
+} */
 
 /* /////////////////////////////////////////////////////
                       section Additional security
