--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -30,6 +30,7 @@
 @import 'blocks/products_videos';
 @import 'blocks/tabs_page_Mitigation';
 @import 'blocks/page_hardware';
+@import 'blocks/products_software';
 
 @import 'paragraph/technology_partners';
 @import 'paragraph/shared';
