Added Public Events page

--- a/web/themes/dedrone/scss/base/_typography.scss
+++ b/web/themes/dedrone/scss/base/_typography.scss
@@ -69,6 +69,15 @@ a{
     color: #009ee3;
 }
 
+ul {padding: 0;}
+li{
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0;
+    font-weight: 300;
+    color: #111;
+}
+
 
 .shared-h1-title{ text-align: center; }
 
