--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -7448,7 +7448,8 @@ button {
 
 .slider-main {
   height: 550px;
-  position: relative; }
+  position: relative;
+  color: #fff; }
   .slider-main .image {
     display: block;
     width: 100%;
@@ -7514,13 +7515,16 @@ button {
         opacity: 1; }
   .slider-main .swiper-wrapper {
     height: 550px; }
-  .slider-main .swiper-slide:nth-child(1) h2,
-  .slider-main .swiper-slide:nth-child(1) p, .slider-main .swiper-slide:nth-child(3) h2,
-  .slider-main .swiper-slide:nth-child(3) p {
-    color: #111; }
-  .slider-main .swiper-slide:nth-child(1) .button, .slider-main .swiper-slide:nth-child(3) .button {
-    background-image: linear-gradient(180deg, #009ee3, #009ee3);
-    color: #fff; }
+  .slider-main .swiper-slide {
+    opacity: 0; }
+    .slider-main .swiper-slide:nth-child(1) {
+      opacity: 1; }
+    .slider-main .swiper-slide:nth-child(2) h2,
+    .slider-main .swiper-slide:nth-child(2) p {
+      color: #111; }
+    .slider-main .swiper-slide:nth-child(2) .button {
+      background-image: linear-gradient(180deg, #009ee3, #009ee3);
+      color: #fff; }
   .slider-main .swiper-container {
     height: 100%; }
     .slider-main .swiper-container .image-wrap {
