--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -18,6 +18,7 @@
 @import 'blocks/customer_image_text_wrap';
 @import 'blocks/tabs';
 @import 'blocks/forms';
+@import 'blocks/event-registration';
 @import 'blocks/home-main-slider';
 @import 'blocks/benefits-trio';
 @import 'blocks/text-columns';
