--- a/web/themes/dedrone/templates/paragraph/paragraph--background-description.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--background-description.html.twig
@@ -46,7 +46,7 @@
     not paragraph.isPublished() ? 'paragraph--unpublished'
   ]
 %}
-<section class='{{ content.css_class }}'>
+<section class='{{ css_class }}'>
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
