--- a/web/themes/dedrone/templates/paragraph/paragraph--description-images-button.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--description-images-button.html.twig
@@ -7,7 +7,7 @@
   ]
 %}
 
-<section class='{{ content.css_class }}'>
+<section class='{{ css_class }}'>
   {% block paragraph %}
     <div{{ attributes.addClass(classes) }}>
       <div class="container">
