--- a/web/themes/dedrone/templates/paragraph/paragraph--bp-tabs.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--bp-tabs.html.twig
@@ -110,7 +110,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 {% set paragraph_id = 'tab-' ~ paragraph.id.value %}
 
 {# Prints Tabs template. #}
-<section class="{{ content.css_class }}">
+<section class="{{ css_class }}">
   <div{{ attributes.addClass(classes).setAttribute('id', paragraph_id) }} role="tablist" aria-multiselectable="true">
     <div class="container">
       <div class="tab-container">
