--- a/web/themes/dedrone/templates/paragraph/paragraph--description-with-buttons.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--description-with-buttons.html.twig
@@ -47,7 +47,7 @@
   ]
 %}
 
-<section class='{{ content.css_class }}'>
+<section class='{{ css_class }}'>
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     <div class="container">
